@@ -31,12 +31,12 @@ The Java Tracer supports automatic instrumentation for the following Oracle JDK,
     <th>Support level</th>
   </thead>
   <tr>
-    <td>from 26 and upward</td>
+    <td>from 27 and upward</td>
     <td>Windows (x86, x86-64)<br>Linux (x86, x86-64, arm64)<br>Mac (x86, x86-64, arm64)</td>
     <td><a href="#levels-of-support">Preview</a></td>
   </tr>
   <tr>
-    <td>from 18 to 25</td>
+    <td>from 18 to 26</td>
     <td>Windows (x86, x86-64)<br>Linux (x86, x86-64, arm64)<br>Mac (x86, x86-64, arm64)</td>
     <td><a href="#levels-of-support">GA</a></td>
   </tr>
@@ -176,14 +176,17 @@ Don't see your desired web frameworks? Datadog is continually adding additional 
 | OkHTTP                             | 2.2+        | Fully Supported                                        | `okhttp`, `okhttp-2`,`okhttp-3`                         |
 | Play WSClient                      | 1.0+        | Fully Supported                                        | `play-ws`                                               |
 | Rabbit AMQP                        | 2.7+        | Fully Supported                                        | `amqp`, `rabbitmq`                                      |
+| SOFA RPC                           | 5.0+        | Fully Supported                                        | `sofarpc`                                               |
 | Spring SessionAwareMessageListener | 3.1+        | Fully Supported                                        | `spring-jms-3.1`                                        |
 | Spring WebClient                   | 5.0+        | Fully Supported                                        | `spring-webflux`, `spring-webflux-client`               |
 
-**Kafka Note**: Datadog's Kafka integration works with Kafka version `0.11+`, which supports the Header API. This API is used to inject and extract trace context. If you are running a mixed version environment, the Kafka broker can incorrectly report the newer version of Kafka. This causes an issue when the tracer tries to inject headers that are not supported by the local producer. Additionally, older consumers are unable to consume the message because of the presence of headers. To prevent these issues, if you are running a mixed version Kafka environment with versions older than 0.11, disable context propagation with the environment variable: `DD_KAFKA_CLIENT_PROPAGATION_ENABLED=false`.
+**Kafka Note**: Datadog's Kafka integration works with Kafka version `0.11+`, which supports the Header API. This API is used to inject and extract trace context. If you are running a mixed version environment, the Kafka broker can incorrectly report the newer version of Kafka. This causes an issue when the SDK tries to inject headers that are not supported by the local producer. Additionally, older consumers are unable to consume the message because of the presence of headers. To prevent these issues, if you are running a mixed version Kafka environment with versions older than 0.11, disable context propagation with the environment variable: `DD_KAFKA_CLIENT_PROPAGATION_ENABLED=false`.
 
 **JMS Note**: Datadog's JMS integration automatically adds and reads message object properties `x__dash__datadog__dash__trace__dash__id` and `x__dash__datadog__dash__parent__dash__id` to maintain context propagation between consumer and producer services.
 
 **Camel Note**: Distributed trace propagation over Camel routes is not supported.
+
+**SOFA RPC Note**: Datadog's SOFA RPC integration supports the Bolt, Triple, and REST transport protocols. Triple uses gRPC transport; distributed tracing for Triple calls requires the `grpc` integration to remain enabled.
 
 Don't see your desired networking framework? Datadog is continually adding additional support. Contact [Datadog support][2] if you need help.
 
@@ -218,6 +221,11 @@ Don't see your desired networking framework? Datadog is continually adding addit
 | Vert.x Redis Client     | 3.9-4.x  | Fully Supported | `vertx-redis-client`                                                                       |
 | Vert.x MySQL Client     | 3.9-4.x  | Fully Supported | `vertx-sql-client`																		                                                       |
 
+**Note**: Redis 6.0+ supports inline authentication in commands such as `HELLO`, `MIGRATE`, and `ACL SETUSER`.
+
+  - **Datadog Trace Agent**: The minimum required and recommended version is `7.76.1` to ensure authentication parameters are automatically obfuscated in trace metadata.
+  - **Datadog Lambda Extension** (Serverless environments): The minimum required version is `v28.0.0`.
+
 `dd-java-agent` is also compatible with common JDBC drivers including:
 
 - Apache Derby
@@ -246,25 +254,25 @@ Don't see your desired datastores? Datadog is continually adding additional supp
 
 `dd-java-agent` includes support for automatically tracing the following frameworks.
 
-| Framework           | Versions   | Support Type                                           | Instrumentation Names (used for configuration) |
-|---------------------|------------|--------------------------------------------------------|------------------------------------------------|
-| Apache CXF (Jax-WS) | 3.0+       | [OpenTelemetry Extension][10]                          | `cxf`                                          |
-| Datanucleus JDO     | 4.0+       | Fully Supported                                        | `datanucleus`                                  |
-| Dropwizard Views    | 0.7+       | Fully Supported                                        | `dropwizard`, `dropwizard-view`                |
-| GraphQL             | 14.0+      | Fully Supported                                        | `graphql-java`                                 |
-| Hazelcast (client)  | 3.6+       | [Preview](#framework-integrations-disabled-by-default) | `hazelcast`, `hazelcast_legacy`                |
-| Hibernate           | 3.5+       | Fully Supported                                        | `hibernate`, `hibernate-core`                  |
-| Hystrix             | 1.4+       | Fully Supported                                        | `hystrix`                                      |
-| JSP Rendering       | 2.3+       | Fully Supported                                        | `jsp`, `jsp-render`, `jsp-compile`             |
-| JUnit               | 4.1+, 5.3+ | Fully Supported                                        | `junit`, `junit-4`, `junit-5`                  |
-| Kotlin Coroutines   | 1.3+       | Fully Supported                                        | `kotlin_coroutine`                             |
-| Project Reactor     | 3.1+       | Fully Supported                                        | `reactor-core`                                 |
-| Quartz              | 2.x        | Fully Supported                                        | `quartz`                                       |
-| RxJava              | 2.x        | Fully Supported                                        | `rxjava`                                       |
-| Spring Data         | 1.8+       | Fully Supported                                        | `spring-data`                                  |
-| Spring Scheduling   | 3.1+       | Fully Supported                                        | `spring-scheduling`                            |
-| TIBCO BusinessWorks | 5.14.0+    | [Preview](#framework-integrations-disabled-by-default) | `tibco`, `tibco_bw`                            |
-| Twilio SDK          | < 8.0      | Fully Supported                                        | `twilio-sdk`                                   |
+| Framework           | Versions         | Support Type                                           | Instrumentation Names (used for configuration) |
+|---------------------|------------------|--------------------------------------------------------|------------------------------------------------|
+| Apache CXF (Jax-WS) | 3.0+             | [OpenTelemetry Extension][10]                          | `cxf`                                          |
+| Datanucleus JDO     | 4.0+             | Fully Supported                                        | `datanucleus`                                  |
+| Dropwizard Views    | 0.7+             | Fully Supported                                        | `dropwizard`, `dropwizard-view`                |
+| GraphQL             | 14.0+            | Fully Supported                                        | `graphql-java`                                 |
+| Hazelcast (client)  | 3.6+             | [Preview](#framework-integrations-disabled-by-default) | `hazelcast`, `hazelcast_legacy`                |
+| Hibernate           | 3.5+             | Fully Supported                                        | `hibernate`, `hibernate-core`                  |
+| Hystrix             | 1.4+             | Fully Supported                                        | `hystrix`                                      |
+| JSP Rendering       | 2.3+             | Fully Supported                                        | `jsp`, `jsp-render`, `jsp-compile`             |
+| JUnit               | 4.1+, 5.3+       | Fully Supported                                        | `junit`, `junit-4`, `junit-5`                  |
+| Kotlin Coroutines   | 1.3+             | Fully Supported                                        | `kotlin_coroutine`                             |
+| Project Reactor     | 3.1+             | Fully Supported                                        | `reactor-core`                                 |
+| Quartz              | 2.x              | Fully Supported                                        | `quartz`                                       |
+| RxJava              | 2.x              | Fully Supported                                        | `rxjava`                                       |
+| Spring Data         | 1.8+             | Fully Supported                                        | `spring-data`                                  |
+| Spring Scheduling   | 3.1+             | Fully Supported                                        | `spring-scheduling`                            |
+| TIBCO BusinessWorks | 5.14.0 - 6.11.0  | [Preview](#framework-integrations-disabled-by-default) | `tibco`, `tibco_bw`                            |
+| Twilio SDK          | < 8.0            | Fully Supported                                        | `twilio-sdk`                                   |
 
 Don't see your desired frameworks? Datadog is continually adding additional support. To request a framework, contact our awesome [support team][2].
 
@@ -292,24 +300,62 @@ Integrations can be enabled or disabled individually (overriding the default abo
 
 - Running the Java tracer in Bitbucket is not supported.
 - Loading multiple Java Agents that perform APM/tracing functions is not a recommended or supported configuration.
-- When enabling the tracer for Java 24+, you may see warnings related to JNI native access or `sun.misc.Unsafe` memory access. Suppress these warnings by adding the `--illegal-native-access=allow` and `--sun-misc-unsafe-memory-access=allow` environment variables right before the `-javaagent:/path/to/dd-java-agent.jar` argument. See [JEP 472][13] and [JEP 498][14] for more information.
+- When running the SDK with Java 24+, you may see warnings related to JNI native access. Suppress these warnings by adding the `--enable-native-access=ALL-UNNAMED` flag. See [JEP 472][13] for more information.
+
+## Ahead-of-time (AOT) class loading & linking support
+
+To improve startup time, Ahead-of-time (AOT) class loading & linking makes application classes instantly available in a loaded and linked state when the JVM starts. See [JEP 483][14] and [JEP 514][15] for more information.
+
+### Requirements
+
+Use:
+
+- Java 25 or later
+- [Datadog Java SDK][1] 1.57.0 or later
+
+### Setup
+
+To set up AOT class loading & linking for APM, add the Datadog Java SDK during the training run:
+```shell
+java -javaagent:/path/to/dd-java-agent.jar -XX:AOTCacheOutput=app.aot -jar App.jar
+```
+
+#### Usage
+
+During production, add the same Datadog Java SDK along with the previously cached training data:
+```shell
+java -javaagent:/path/to/dd-java-agent.jar -XX:AOTCache=app.aot -jar App.jar
+```
+
+You can view traces using the [Trace Explorer][9].
+
+{{% collapse-content title="Troubleshooting" level="h4" %}}
+##### Not attaching the Datadog Java SDK during the training run
+
+If you see this warning in production, it means the Datadog Java SDK wasn't attached during training:
+```
+Mismatched values for property jdk.module.addmods: java.instrument specified during runtime but not during dump time
+```
+The JVM cannot then use the AOT cache to improve startup time. The solution is to attach the SDK during training.
+
+{{% /collapse-content %}}
 
 ## GraalVM Native Image support
 
-GraalVM Native Image is a technology that allows you to compile Java applications into native executables. The Datadog Java tracer supports GraalVM Native Image. This allows you to compile your applications into native executables while still benefiting from the tracing capabilities offered by the library.
+GraalVM Native Image is a technology that allows you to compile Java applications into native executables. The Datadog Java SDK supports GraalVM Native Image. This allows you to compile your applications into native executables while still benefiting from the tracing capabilities offered by the library.
 
 ### Requirements
 
 Use:
 
 - [GraalVM JDK 21 or JDK 25][7]
-- [Datadog Java tracer][1]
+- [Datadog Java SDK][1]
 
 ### Setup
 
 {{< tabs >}}
 {{% tab "GraalVM" %}}
-To set up the Datadog Java tracer with GraalVM Native Image, follow these steps:
+To set up the Datadog Java SDK with GraalVM Native Image, follow these steps:
 
 1. Instrument your application, following the steps described on [Tracing Java Applications][6].
 2. When you build a native executable with the `native-image` command, add the `-J-javaagent:/path/to/dd-java-agent.jar` argument. For example:
@@ -324,7 +370,7 @@ To set up the Datadog Java tracer with GraalVM Native Image, follow these steps:
 {{% /tab %}}
 
 {{% tab "Quarkus Native" %}}
-To set up the Datadog Java tracer with Quarkus Native, follow these steps:
+To set up the Datadog Java SDK with Quarkus Native, follow these steps:
 
 1. Instrument your application, following the steps described in [Tracing Java Applications][6].
 2. When you build a native executable, use the `quarkus.native.additional-build-args` property. For example:
@@ -339,7 +385,7 @@ To set up the Datadog Java tracer with Quarkus Native, follow these steps:
 {{% /tab %}}
 
 {{% tab "Spring Native" %}}
-To set up the Datadog Java tracer with Spring Native, follow these steps:
+To set up the Datadog Java SDK with Spring Native, follow these steps:
 
 1. Instrument your application, following the steps described on [Tracing Java Applications][6].
 2. For Spring Native builds based on Buildpacks, enable the [Paketo Buildpack for Datadog][8] using `BP_DATADOG_ENABLED=true`.
@@ -421,7 +467,42 @@ paketo-buildpacks_datadog/helper/exec.d/toggle': exit status 1
 
 The solution to this issue is to upgrade to version 4.6.0 or later.
 
-##### Problem activating Datadog tracer
+##### Spring Native build crashes with exec.d/toggle error
+
+You may encounter a similar error as the one above, even on buildpack versions newer than 4.6.0, when building a Spring Boot native image:
+
+```text
+disabling Datadog at launch time is unsupported for Node
+ERROR: failed to launch: exec.d: failed to execute exec.d file at path '/layers
+paketo-buildpacks_datadog/helper/exec.d/toggle': exit status 1
+```
+
+This typically happens because the Datadog buildpack runs before the native image buildpack, so it doesn't know a native image build is intended. It incorrectly adds a toggle script meant for JVM builds, which is incompatible with the final native executable.
+
+The solution is to explicitly set the `BP_NATIVE_IMAGE` environment variable to `true` in the `spring-boot-maven-plugin` configuration. This ensures all buildpacks are aware it's a native image build from the start.
+
+```yaml
+<build>
+  <plugins>
+    <plugin>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-maven-plugin</artifactId>
+      <configuration>
+        <image>
+          ...
+          <env>
+            ...
+            <BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE>
+            ...
+          </env>
+        </image>
+      </configuration>
+    </plugin>
+  </plugins>
+</build>
+```
+
+##### Problem activating Datadog SDK
 
 You might encounter initialization errors if your tracer configuration relies on Unix Domain Sockets (UDS), which are not supported in native images:
 
@@ -451,4 +532,5 @@ For more information, see [Configure APM and DogstatsD communication mode][11]. 
 [11]: /containers/cluster_agent/admission_controller/?tab=datadogoperator#configure-apm-and-dogstatsd-communication-mode
 [12]: /tracing/trace_collection/library_config/#agent
 [13]: https://openjdk.org/jeps/472
-[14]: https://openjdk.org/jeps/498
+[14]: https://openjdk.org/jeps/483
+[15]: https://openjdk.org/jeps/514
